src/objects/Product_Vendor_Location_Association__c.object
<CustomObject>
    <fields>
        <fullName>Criticality__c</fullName>
        <label>Criticality</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this is a Tier 2 or lower Vendor Location relationship, select the parent Vendor Location relationship.  Note:  the parent must be 1 tier higher than the child.</inlineHelpText>
        <label>Parent</label>
        <referenceTo>Product_Vendor_Location_Association__c</referenceTo>
        <relationshipLabel>Child Product/Vendor Location Associations</relationshipLabel>
        <relationshipName>Child_Vendor_Location_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Product/Vendor Location Associations</relationshipLabel>
        <relationshipName>Product_Vendor_Location_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <inlineHelpText>Select 1 if this Vendor Location provides this product directly to your company, select 2 if this Vendor Location provides components to the Tier 1 vendor for this product, etc.</inlineHelpText>
        <label>Tier</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Location__c</fullName>
        <label>Vendor Location</label>
        <referenceTo>Vendor_Location__c</referenceTo>
        <relationshipLabel>Product/Vendor Location Associations</relationshipLabel>
        <relationshipName>Product_Vendor_Location_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <formula>Vendor_Location__r.Vendor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor</label>
        <type>Text</type>
    </fields>
    <label>Product/Vendor Location Association</label>
    <nameField>
        <displayFormat>PRDVLA{000000}</displayFormat>
        <label>Product/Vendor Location Association Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product/Vendor Location Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>